MFB51: Fixed bug #36308 (ReflectionProperty::getDocComment() does not reflect extended class commentary).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@206705 c90b9560-bf6c-de11-be94-00142212c4b1